--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,8 @@
   .khar{
     z-index: 99 !important;
   }
+  .bg-transparant-black {
+    background-color: rgba(0, 0, 0, .5) !important;
+     /* background-color: red; */
+  }
+  
