--- a/src/index.css
+++ b/src/index.css
@@ -70,4 +70,14 @@
     background-color: rgba(0, 0, 0, .5) !important;
      /* background-color: red; */
   }
+  .card {
+    padding: 2em;
+  }
+  
+  .read-the-docs {
+    color: #888;
+  }
+  #khar-black{
+    background-color: rgba(0, 0, 0, .5) !important;
+  }
   
