--- a/src/index.css
+++ b/src/index.css
@@ -80,4 +80,6 @@
   #khar-black{
     background-color: rgba(0, 0, 0, .5) !important;
   }
-  
+  .over::-webkit-scrollbar {
+    display: none;
+  }
